UUpdated css added parallax effect with background-attachment=fixed, added media query to make responsive on smaller device screens, styled each section

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -8,6 +8,20 @@ body, html{
     color: #666;
 }
 
+.pimg1, .pimg2, .pimg3{
+    position: relative;
+    opacity: 0.70;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+
+    /*
+        fixed = parallax
+        scroll = normal
+    */
+    background-attachment: fixed;
+}
+
 .pimg1{
     background-image:url('../images/pexels-lukas-kloeppel-466685\ \(1\).jpg');
     min-height: 100%;
@@ -19,4 +33,46 @@ body, html{
 .pimg3{
     background-image: url('../images/pexels-peng-liu-169647.jpg');
     min-height: 400px;
+}
+
+.ptext{
+    position: absolute;
+    top:50%;
+    width:100%;
+    text-align: center;
+    color:#000;
+    font-size: 27px;
+    letter-spacing: 8px;
+    text-transform: uppercase;
+}
+
+.ptext .border{
+    background-color: #111;
+    color: #fff;
+    padding: 20px;
+}
+
+.ptext .border.trans{
+    background-color: transparent;
+}
+
+@media(max-width: 568px){
+    .pimg1, .pimg2, .pimg3{
+        background-attachment:scroll;
+    }
+}
+
+.section{
+    text-align: center;
+    padding: 50px 80px;
+}
+
+.section-light{
+    background-color: #f4f4f4;
+    color: #666;
+}
+
+.section-dark{
+    background-color: #282e34;
+    color:#ddd;
 }
